# libcmd

./: Cargo.toml
libcmd/: Cargo.toml
libcmd/src/: cmd.rs  lib.rs  read.rs  write.rs
