[workspace]
resolver='2'
package.version='0.0.1'
package.edition='2024'
members = [
    "libcmd"
]

[workspace.dependencies]
liberror = { git = "https://github.com/charliethomson/liberror" }
libsignal = { git = "https://github.com/charliethomson/libsignal" }
libring = { git = "https://github.com/charliethomson/libring" }
